# ja_transformers_dev_template

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
