[tool.poetry]
name = "ja-transforemer-dev"
version = "0.0.1"
description = ""
authors = ["akiFQC <yakaredori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2"
transformers = "^4.39.2"
datasets = "^2.18.0"
pandas = "^2.2.1"
evaluate = "^0.4.1"
sentence-transformers = "^2.6.1"
fastparquet = "^2024.2.0"
tqdm = "^4.66.2"
sentencepiece = "^0.2.0"
nltk = "^3.8.1"
fugashi = {extras = ["unidic-lite"], version = "^1.3.1"}
sudachipy = "^0.6.8"
pyarrow = "^15.0.2"
protobuf = "^5.26.1"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
seaborn = "^0.13.2"
tensorboardx = "^2.6.2.2"
black = "^24.3.0"
mypy = "^1.9.0"
isort = "^5.13.2"
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
